# motion-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: motion-core-config.cmake.in
docs/: architecture.md
examples/: library_example.cpp  reference_path.csv
include/motion_core/: common.hpp  lqr.hpp  models.hpp  motion_core.hpp  path_tracking.hpp  pid.hpp  predictive_controller.hpp
src/: cli.cpp  lqr.cpp  models.cpp  numeric.hpp  path_tracking.cpp  pid.cpp  predictive_controller.cpp
tests/: test_motion_core.cpp
tests/install_consumer/: CMakeLists.txt  main.cpp
